--- a/app/styles/left-nav.scss
+++ b/app/styles/left-nav.scss
@@ -1,5 +1,10 @@
-$h1_font_size: 30px;
-$menu_font_size: 20px;
+$h1_font_size: 25px;
+$menu_font_size: 15px;
+
+#left-nav {
+	height: 100%;
+	z-index: 10;
+}
 
 .md-toolbar-tools {
 	display: flex;
@@ -8,7 +13,7 @@ $menu_font_size: 20px;
 }
 .nav-content {
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: column wrap;
 
 	.nav-option {
 		width: 100%;
