--- a/app/styles/left-nav.scss
+++ b/app/styles/left-nav.scss
@@ -1,5 +1,5 @@
 $h1_font_size: 25px;
-$menu_font_size: 15px;
+$menu_font_size: 17px;
 
 #left-nav {
 	height: 100%;
@@ -21,7 +21,10 @@ $menu_font_size: 15px;
 		margin: 0px;
 		font-size: $menu_font_size;
 	}
-	.naw-option--normal {
+	.nav-option--chosen {
+		background: #ECECEC
+	}
+	.nav-option--normal {
     	border-bottom: 1px solid rgba(0.1, 0.1, 0.1, 0.2);
 	}
 	.nav-option--close {
