--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,3 +133,33 @@ body {
 .c-constraint{
     margin: 15px 40px 5px 5px;
 }
+
+.c-file-input-form{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column; 
+
+    span {
+        margin: 6px 8px;
+    }
+
+}
+
+.o-first-week-input{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.c-custom-button{
+    width: 289px !important;
+    height: 60px !important;
+    margin-left: 0px !important;
+    background-color: #d3394c !important;
+    &:hover {
+        background-color: #722040 !important;
+    }
+}
