added post req with firstWeek

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -163,3 +163,9 @@ body {
         background-color: #722040 !important;
     }
 }
+
+.c-loader {
+    position: absolute; 
+    top: 50%; 
+    right: 50%;
+}
